cache/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cache-system
  labels:
    app.kubernetes.io/part-of: myworkspace
    app.kubernetes.io/component: cache
